--- a/pilaf/package.json
+++ b/pilaf/package.json
@@ -21,12 +21,14 @@
     "@react-navigation/stack": "^5.14.3",
     "date-fns": "^2.19.0",
     "formik": "^2.2.6",
+    "hark": "^1.2.3",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-config": "^1.4.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-get-random-values": "^1.6.0",
     "react-native-inappbrowser-reborn": "^3.5.1",
+    "react-native-incall-manager": "^3.3.0",
     "react-native-modal": "^11.7.0",
     "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "^3.2.0",
